--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -80,6 +80,7 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           file: ./coverage.xml
+          fail_ci_if_error: true
 
   qcut:
     runs-on: ubuntu-latest
@@ -128,6 +129,7 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           file: ./coverage.xml
+          fail_ci_if_error: true
 
   qchem:
     runs-on: ubuntu-latest
@@ -175,6 +177,7 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           file: ./coverage.xml
+          fail_ci_if_error: true
 
   device-tests:
     runs-on: ubuntu-latest
@@ -241,3 +244,4 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           file: ./coverage.xml
+          fail_ci_if_error: true
